--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_DATABASE=database_name
-DB_USERNAME=username
-DB_PASSWORD=password
+DB_HOST=<DB_HOST>
+DB_DATABASE=<DB_DATABASE>
+DB_USERNAME=<DB_USER>
+DB_PASSWORD=<DB_PASSWORD>
 DB_PORT=3306
-DB_SOCKET=socket
+DB_SOCKET=<DB_SOCKET>
